refactor program instances
